method updated