@@ -18,7 +18,8 @@ public class FindPath {
                 me, List.of(new Person("Friend 1", false), new Person("Friend 2", false)),
                 new Person("Friend 1", false), List.of(new Person("Friend 1-1", true), new Person("Friend 1-2", false)),
                 new Person("Friend 2", false), List.of(new Person("Friend 2-1", true), new Person("Friend 2-2", false)),
-                new Person("Friend 1-1", false), Collections.emptyList(),
+//                new Person("Friend 1-1", false), Collections.emptyList(),
+                new Person("Friend 1-1", false), List.of(me), // should be an infinity loop if the method implemented incorrectly
                 new Person("Friend 1-2", false), Collections.emptyList(),
                 new Person("Friend 2-1", false), Collections.emptyList(),
                 new Person("Friend 2-2", false), Collections.emptyList()
@@ -37,6 +38,7 @@ public class FindPath {
     private static List<Person> findFriendDFS(Map<Person, List<Person>> friends, Person firstPerson, boolean firstFound) {
         ArrayList<Person> people = new ArrayList<>();
         LinkedList<Person> queue = new LinkedList<>();
+        Set<Person> visitedNodes = new HashSet<>();
         queue.add(firstPerson);
 
         int counter = 0;
@@ -44,6 +46,12 @@ public class FindPath {
         while (!queue.isEmpty()){
             Person person = queue.pop();
             System.out.println(String.format("%d Check person : %s", ++counter, person));
+
+            if (visitedNodes.contains(person)) {
+                continue;
+            }
+            visitedNodes.add(person);
+
             if (person.isProgrammer) {
                 if (firstFound) {
                     return List.of(person);
